2017-06-18  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: CSI?40h resizes screen as the value of DECCOLM.

2017-06-14  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.[ch]:
	  - DECATC is supported.
	  - DECRQM and DECRQMH are supported and {set|get}_vtmode() functions and
	    vtmode_t enum and so on are added.
	  - SGR of DECRQSS is supported.

	* vt_logical_visual.c:
	  'count == 0' => 'count = 0' in vt_logical_visual_cursor_is_rtl().

	* vt_screen.h:
	  - vt_screen_is_using_bce() and vt_screen_is_using_rect_attr_select() are added.
	  - vt_screen_set_use_bce() changes setting of vt_screen_t::alt_edit
	    instead of vt_screen_::normal_edit.

	* vt_edit.h:
	  vt_edit_is_using_bce() and vt_edit_is_using_rect_attr_select() are added.

2017-06-14  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_font.c: Fixes for DECDHL.

	* console/ui_window.c: size_attr is added to the arguments of set_attr()
	  to support DECDHL and DECDWL.

	* console/ui_font.c: Unnecessary code is removed.

2017-06-12  Araki Ken  <arakiken@users.sf.net>

	* c_regis.c: Hack for MSYS is added.

	* ui_font.h, win32/ui.h, win32/ui_font.c:
	  'size' is moved from ui_font_t to XFontStruct on win32.

	* configure.in, baselib/configure.in: Whether it is msys-2.0 or not is checked.

2017-06-11  Araki Ken  <arakiken@users.sf.net>

	* README.win32: Updated.

	* libptyssh/vt_pty_ssh.c: connect_to_x11() is separated from x11_callback().

	* win32/ui_display.c: CloseHandle(_disp.cursors[count]) is removed.

2017-06-07  Araki Ken  <arakiken@users.sf.net>

	* console/ui.h, win32/ui.h: "#include <mef/ef_conv.h>" is removed.

	* config.sub, config.guess: Updated.

2017-06-05  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c:
	  ui_display_t::selection_owner is set in add_root_to_display().

	* gtk/Makefile.in: @BRLAPI_CFLAGS@ and @BRLAPI_LIBS@ are added.

	* vte.c:
	  - vte_terminal_{set|get}_word_char_exceptions() is fixed.
	  - ui_brltty_{init|final}() are called.
