@@ -1,8 +1,12 @@
 2017-06-18  Araki Ken  <arakiken@users.sf.net>
 
+	* vt_parser.c: Whether ps[0] < VTMODE(0) is checked in processing DECRQMH.
+
+2017-06-18  Araki Ken  <arakiken@users.sf.net>
+
 	* vt_parser.c: CSI?40h resizes screen as the value of DECCOLM.
 
-2017-06-14  Araki Ken  <arakiken@users.sf.net>
+2017-06-17  Araki Ken  <arakiken@users.sf.net>
 
 	* vt_parser.[ch]:
 	  - DECATC is supported.
